<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">

    <RelativeLayout
        android:id="@+id/rel_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/transition">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="40sp"
            android:id="@+id/textView4"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="49dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit"
            android:id="@+id/textView5"
            android:layout_marginTop="92dp"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/git_hub"
            android:id="@+id/textView6"
            android:layout_marginTop="31dp"
            android:layout_below="@+id/textView7"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_found"
            android:id="@+id/textView7"
            android:layout_marginTop="34dp"
            android:layout_below="@+id/textView5"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_button"
            android:id="@+id/button4"
            android:width="200dp"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp"
            android:background="@drawable/button_black"/>
    </RelativeLayout>
</LinearLayout>